<resources>
    <string name="app_name">生活助手</string>

    <!-- public -->
    <string name="request_error">请求错误</string>
    <string name="query_error">查询错误</string>
    <string name="province_az_title">选择省份</string>
    <string name="toast_repeat_error">确认密码错误</string>

    <!-- icon_font -->
    <string name="icon_back">&#xe609;</string>
    <string name="icon_forward">&#xe602;</string>
    <string name="icon_account">&#xe603;</string>
    <string name="icon_sleep">&#xe604;</string>
    <string name="icon_environment">&#xe608;</string>
    <string name="icon_express">&#xe605;</string>
    <string name="icon_mobile">&#xe606;</string>
    <string name="icon_idcard">&#xe607;</string>
    <string name="icon_person">&#xe625;</string>
    <string name="icon_goodevil">&#xe667;</string>

    <!-- toolbar -->
    <string name="toolbar_sleep">睡眠助手</string>
    <string name="toolbar_environment">空气质量</string>
    <string name="toolbar_express">快递查询</string>
    <string name="toolbar_mobile">手机归属地</string>
    <string name="toolbar_idcard">身份证查询</string>
    <string name="toolbar_goodevil">惩恶扬善</string>
    <string name="toolbar_login">用户登录</string>
    <string name="toolbar_register">用户注册</string>
    <string name="toolbar_forget_password">重置密码</string>
    <string name="toolbar_car_info">车辆信息查询</string>
    <string name="toolbar_ucenter">用户中心</string>
    <string name="toolbar_password">修改密码</string>

    <!-- activity_main -->
    <string name="tab_life">生活</string>
    <string name="tab_car">汽车</string>
    <string name="version_title">版本更新</string>
    <string name="version_message">是否下载最新版本？</string>

    <!-- fragment_life -->
    <string name="life_sleep">睡眠助手</string>
    <string name="life_environment">空气质量</string>
    <string name="life_express">快递查询</string>
    <string name="life_mobile">手机归属地</string>
    <string name="life_idcard">身份证查询</string>
    <string name="life_goodevil">惩恶扬善</string>

    <!-- fragment_car -->
    <string name="car_info">车辆信息查询</string>
    <string name="car_ucenter">用户中心</string>

    <!-- activity_sleep -->
    <string name="am_time">开启时间</string>
    <string name="pm_time">关闭时间</string>
    <string name="am_time_default">22:00</string>
    <string name="pm_time_default">06:00</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="set_success">设置成功</string>

    <!-- activity_environment -->
    <string name="environment_address">选择地址</string>
    <string name="environment_default_address">北京-北京-北京</string>
    <string name="environment_aqi">AQI</string>
    <string name="environment_pm10">PM10</string>
    <string name="environment_pm25">PM2.5</string>
    <string name="environment_so2">SO2</string>
    <string name="environment_no2">NO2</string>
    <string name="environment_quality">空气质量</string>
    <string name="environment_updatetime">更新时间</string>

    <!-- activity_express -->
    <string name="express_number">快递单号</string>
    <string name="express_state_2">在途中</string>
    <string name="express_state_3">已签收</string>
    <string name="express_state_4">问题件</string>

    <!-- activity_mobile -->
    <string name="mobile_number">手机号码</string>

    <!-- activity_idcard -->
    <string name="idcard_number">身份证号码</string>

    <!-- activity_goodevil -->
    <string name="goodevil_evil">我要惩恶</string>
    <string name="goodevil_good">我要扬善</string>
    <string name="goodevil_load">努力加载中...</string>

    <!-- activity_login -->
    <string name="login_mobile">手机号码</string>
    <string name="login_password">登录密码</string>
    <string name="login_button">登录</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_register">我要注册</string>

    <!-- activity_register -->
    <string name="register_mobile">手机号码</string>
    <string name="register_password">登录密码</string>
    <string name="register_code">手机验证码</string>
    <string name="register_code_button">发送验证码</string>
    <string name="register_button">注册</string>

    <!-- activity_forget_password -->
    <string name="password_mobile">手机号码</string>
    <string name="password_password">新密码</string>
    <string name="password_code">手机验证码</string>
    <string name="password_code_button">发送验证码</string>
    <string name="password_button">重置密码</string>

    <!-- activity_carinfo -->
    <string name="carinfo_search">查询</string>
    <string name="carinfo_dial">呼叫</string>

    <!-- activity_ucenter -->
    <string name="ucenter_name">姓名</string>
    <string name="ucenter_province_az">京A</string>
    <string name="ucenter_platenumber">车牌号码</string>
    <string name="ucenter_password">修改密码</string>
    <string name="ucenter_save">保存</string>
    <string name="ucenter_quit">退出</string>

    <!-- activity_password -->
    <string name="password_old">旧密码</string>
    <string name="password_new">新密码</string>
    <string name="password_repeat">确认新密码</string>
    <string name="password_save">保存</string>


    <string name="code_send_success">验证码已发送</string>
    <string name="code_verify_failed">验证码错误</string> <!-- no use -->


</resources>
