<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWindow">

    <include
        layout="@layout/toolbar"/>

    <EditText
        android:id="@+id/ucenterName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/edittext_margin_top"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"
        android:background="@color/colorWhite"
        android:textSize="@dimen/text_size"
        android:hint="@string/ucenter_name"
        android:inputType="text"/>
w
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/line_height">
        <TextView
            android:id="@+id/ucenterProvinceAz"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_right"
            android:textSize="@dimen/text_size"
            android:gravity="center_vertical"
            android:background="@drawable/selector_linearlayout"
            android:text="@string/ucenter_province_az" />
        <View
            android:layout_width="@dimen/line_height"
            android:layout_height="match_parent"
            android:background="@color/colorWindow"/>
        <EditText
            android:id="@+id/ucenterPlatenumber"
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_right"
            android:textSize="@dimen/text_size"
            android:background="@color/colorWhite"
            android:hint="@string/ucenter_platenumber"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ucenterPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/edittext_margin_top"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"
        android:background="@drawable/selector_linearlayout">
        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size"
            android:text="@string/ucenter_password"/>
        <TextView
            android:id="@+id/ucenterPasswordMore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"
        android:layout_marginTop="@dimen/button_margin_top"
        android:orientation="horizontal">
        <Button
            android:id="@+id/ucenterSave"
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:background="@drawable/selector_button"
            android:text="@string/ucenter_save"/>
        <View
            android:layout_width="@dimen/view_width"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/ucenterQuit"
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:background="@drawable/selector_button"
            android:text="@string/ucenter_quit"/>
    </LinearLayout>

</LinearLayout>



