<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWindow">

    <include
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"
        android:layout_marginTop="@dimen/edittext_margin_top">
        <EditText
            android:id="@+id/passwordMobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            android:hint="@string/password_mobile"
            android:inputType="phone"
            android:background="@drawable/selector_edittext"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"
        android:layout_marginTop="@dimen/edittext_margin_top">
        <EditText
            android:id="@+id/passwordPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            android:hint="@string/password_password"
            android:inputType="phone"
            android:background="@drawable/selector_edittext"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"
        android:layout_marginTop="@dimen/edittext_margin_top"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/passwordCode"
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            android:hint="@string/password_code"
            android:inputType="number"
            android:background="@drawable/selector_edittext"/>
        <View
            android:layout_width="@dimen/view_width"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/passwordCodeButton"
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/password_code_button"
            android:background="@drawable/selector_button"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/button_margin_top"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right">
        <Button
            android:id="@+id/passwordButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/password_button"
            android:background="@drawable/selector_button"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>

</LinearLayout>
