<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wjc.flyinghelper.SleepFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorWindow">

            <LinearLayout
                android:id="@+id/amTimeLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/edittext_margin_top"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="@dimen/padding_right"
                android:background="@drawable/selector_linearlayout">
                <TextView
                    android:layout_width="@dimen/dp_0"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/am_time"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size"/>
                <TextView
                    android:id="@+id/amTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/am_time_default"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pmTimeLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/line_height"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="@dimen/padding_right"
                android:background="@drawable/selector_linearlayout">
                <TextView
                    android:layout_width="@dimen/dp_0"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/pm_time"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size"/>
                <TextView
                    android:id="@+id/pmTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/pm_time_default"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/switchCompatLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/switch_height"
                android:layout_marginTop="@dimen/line_height"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="@dimen/padding_right"
                android:background="@drawable/selector_linearlayout">
                <TextView
                    android:layout_width="@dimen/dp_0"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/app_name"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size"/>
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switchCompat"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:clickable="false"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin_top"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="@dimen/padding_right">
                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:text="@string/confirm"
                    android:textSize="@dimen/button_text_size"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/selector_button"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
