<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWindow">

    <include
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/passwordOld"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/edittext_margin_top"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="@dimen/padding_right"
                android:background="@color/colorWhite"
                android:textSize="@dimen/text_size"
                android:hint="@string/password_old"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/passwordNew"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/line_height"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="@dimen/padding_right"
                android:background="@color/colorWhite"
                android:textSize="@dimen/text_size"
                android:hint="@string/password_new"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/passwordRepeat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/line_height"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="@dimen/padding_right"
                android:background="@color/colorWhite"
                android:textSize="@dimen/text_size"
                android:hint="@string/password_repeat"
                android:inputType="textPassword"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="@dimen/padding_right"
                android:layout_marginTop="@dimen/button_margin_top"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/passwordSave"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:background="@drawable/selector_button"
                    android:text="@string/password_save"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>



