<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWindow">

        <include
            layout="@layout/toolbar"/>

        <LinearLayout
            android:id="@+id/amTimeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/edittext_margin_top"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_right"
            android:background="@drawable/selector_linearlayout">
            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/am_time"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_size"/>
            <TextView
                android:id="@+id/amTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/am_time_default"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_size"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pmTimeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/line_height"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_right"
            android:background="@drawable/selector_linearlayout">
            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/pm_time"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_size"/>
            <TextView
                android:id="@+id/pmTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pm_time_default"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_size"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/switchCompatLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/switch_height"
            android:layout_marginTop="@dimen/line_height"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_right"
            android:background="@drawable/selector_linearlayout">
            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/life_sleep"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_size"/>
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchCompat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="false"
                android:clickable="false"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/sleepSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_save"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/padding_right"
        app:backgroundTint="@color/colorButton"
        app:rippleColor="@color/colorButtonRipple"
        app:borderWidth="@dimen/fab_border"
        app:elevation="@dimen/fab_elevation"
        app:pressedTranslationZ="@dimen/fab_pressed"
        app:fabSize="normal" />
</android.support.design.widget.CoordinatorLayout>


